# speechkit

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  test.Dockerfile
.github/workflows/: code_check.yml
conf/: .env.example
docker/: json-logging.yaml  plain-logging.yaml  start.sh  vllm-0.8.2+cpu-cp312-cp312-linux_x86_64.whl  vllm-0.8.2+cpu.cpu-cp312-cp312-macosx_15_0_arm64.whl
scripts/: download_model.py  upload_file.py
speechkit/: dependencies.py
speechkit/api/: __main__.py  middlewares.py
speechkit/api/middlewares/: __init__.py  access_log.py  auth.py
speechkit/api/routers/: recognition.py  system.py
speechkit/broker/: __init__.py
speechkit/broker/middlewares/: __init__.py  prometheus.py  structlog.py
speechkit/broker/tasks/: __init__.py  inference.py
speechkit/cli/: __main__.py
speechkit/cli/commands/: download_model.py  root.py  upload_file.py
speechkit/domain/dto/: file.py  task.py  task_status.py
speechkit/domain/repository/: authentication.py  file_content.py  file_metadata.py  file_system.py  task.py
speechkit/domain/service/: inference_runner.py  model_downloader.py  recognition_service.py
speechkit/infrastructure/: logs.py  metrics.py  settings.py
speechkit/infrastructure/database/: schemas.py  session_provider.py
speechkit/infrastructure/database/migrations/: __init__.py  __main__.py  env.py
speechkit/infrastructure/database/migrations/versions/: 2025-03-25_tokens.py  2025-03-30_task.py
speechkit/infrastructure/repository/: auth_storage.py  file_content_repository.py  metadata_repository.py  task_repository.py
speechkit/infrastructure/service/: model_downloader.py  recognition_service.py
speechkit/infrastructure/service/inference_runner/: onnx_inference_runner.py  pytorch_inference_runner.py  vllm_inference_runner.py
tests/: conftest.py  test_linting.py
tests/load/: __main__.py
tests/unit/: conftest.py  factories.py
